src/parser/snapshots/rust_interpreter__parser__test__array_3.snap
---
source: src/parser/test.rs
description: "[1,\"foo\",fn(x) { x + 1 }];"
expression: stmts
---
[
    ExpressionStatement(
        Array[Int(1), StringLiteral("foo"), Function { token: Token { token_kind: LParen, line: 0, span: 11..12 }, params: [Identifier("x")], body: Block { statements: [ExpressionStatement(Infix { token: "+", left: Identifier("x"), right: Int(1) })] } }],
    ),
]
