src/parser/snapshots/rust_interpreter__parser__test__fn_call_debug_4.snap
---
source: src/parser/test.rs
description: "fn(x, y){ return x + y; }(1, 2);"
expression: stmts
---
[
    ExpressionStatement(
        Call { token: Token { token_kind: LParen, line: 0, span: 25..26 }, function: Function { token: Token { token_kind: LParen, line: 0, span: 2..3 }, params: [Identifier("x"), Identifier("y")], body: Block { statements: [Return { value: Infix { token: "+", left: Identifier("x"), right: Identifier("y") } }] } }, args: [Int(1), Int(2)] },
    ),
]
