src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_11.snap
---
source: src/parser/test.rs
description: 3 + 4 * 5 == 3 * 1 + 4 * 5
expression: first
---
((3 + (4 * 5)) == ((3 * 1) + (4 * 5)));
