src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_14.snap
---
source: src/parser/test.rs
description: 3 > 5 == false
expression: first
---
((3 > 5) == false);
