src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_16.snap
---
source: src/parser/test.rs
description: 1 + (2 + 3) + 4
expression: first
---
((1 + (2 + 3)) + 4);
