src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_20.snap
---
source: src/parser/test.rs
description: "!(true == true)"
expression: first
---
(!(true == true));
