src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_21.snap
---
source: src/parser/test.rs
description: a + add(b * c) + d
expression: first
---
((a + add((b * c))) + d);
