src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_22.snap
---
source: src/parser/test.rs
description: "add(a, b, 1, 2 * 3, 4 + 5, add(6, 7 * 8))"
expression: first
---
add(a,b,1,(2 * 3),(4 + 5),add(6,(7 * 8)));
