src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_23.snap
---
source: src/parser/test.rs
description: add(a + b + c * d / f + g)
expression: first
---
add((((a + b) + ((c * d) / f)) + g));
