src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_24.snap
---
source: src/parser/test.rs
description: "a * [1, 2, 3, 4][b * c] * d"
expression: first
---
((a * ([1,2,3,4][(b * c)])) * d);
