src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_25.snap
---
source: src/parser/test.rs
description: "add(a * b[2], b[1], 2 * [1, 2][1])"
expression: first
---
add((a * (b[2])),(b[1]),(2 * ([1,2][1])));
