src/parser/snapshots/rust_interpreter__parser__test__operator_precedence_8.snap
---
source: src/parser/test.rs
description: a + b * c + d / e - f
expression: first
---
(((a + (b * c)) + (d / e)) - f);
